--- a/Backend/Backend/Backend.csproj
+++ b/Backend/Backend/Backend.csproj
@@ -13,4 +13,20 @@
       <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="8.1.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Application\Services\" />
+      <Folder Include="Application\Validators\" />
+      <Folder Include="Controllers\" />
+      <Folder Include="Domain\Entites\" />
+      <Folder Include="Domain\Enums\" />
+      <Folder Include="Domain\Interfaces\" />
+      <Folder Include="Domain\ValueObjects\" />
+      <Folder Include="DTOs\" />
+      <Folder Include="Infrastructure\Email\" />
+      <Folder Include="Infrastructure\Persistence\" />
+      <Folder Include="Infrastructure\Repositories\" />
+      <Folder Include="Infrastructure\Security\" />
+      <Folder Include="Middleware\" />
+    </ItemGroup>
+
 </Project>
